<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_panel"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_view_for_radio_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/text_fot_radio_button_tv"
        android:textSize="@dimen/main_text_size"
        android:layout_marginTop="9dp"/>


    <RadioGroup
        android:id="@+id/radio_group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_for_radio_button_left"
            android:textSize="@dimen/main_text_size" />

        <RadioButton
            android:id="@+id/radio_button_2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_for_radio_button_right"
            android:textSize="@dimen/main_text_size" />


    </RadioGroup>


</LinearLayout>